--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
-version: '3'  
-services:  
-  app:  
-    build: .  
-    ports:  
-      - "80:80"
+---
+version: "3.8"
+services:
+  app:
+    build: .
+    ports:
+      - 80:80
