--- a/package.json
+++ b/package.json
@@ -1,15 +1,1 @@
-{
-  "name": "devops-build",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "express": "^4.21.1"
-  }
-}
+{"name":"react-proj","version":"1.0.0","private":true,"dependencies":{"react":"^17.0.0","react-dom":"^17.0.0","react-scripts":"^5.0.1"},"scripts":{"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject"},"eslintConfig":{"extends":["react-app"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]}}
