--- a/package.json
+++ b/package.json
@@ -1,1 +1,18 @@
-{"name":"react-proj","version":"1.0.0","private":true,"dependencies":{"react":"^17.0.0","react-dom":"^17.0.0","react-scripts":"^5.0.1"},"scripts":{"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject"},"eslintConfig":{"extends":["react-app"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]}}
+{  
+  "name": "devops-build",  
+  "version": "1.0.0",  
+  "description": "A simple Node.js application for DevOps build process.",  
+  "main": "index.js",  
+  "scripts": {  
+    "start": "node index.js",  
+    "test": "echo \"Error: no test specified\" && exit 1"  
+  },  
+  "dependencies": {  
+    "express": "^4.18.2"  // Example dependency  
+  },  
+  "devDependencies": {  
+    "nodemon": "^2.0.20" // Optional for development  
+  },  
+  "author": "Your Name",  
+  "license": "ISC"  
+}
