--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "express": "^4.18.2"  // Example dependency  
   },  
   "devDependencies": {  
-    "nodemon": "^2.0.20" // Optional for development  
-  },  
+  "nodemon": "^2.0.20",   
+  "typescript": "^4.9.5" // Add this line if you need TypeScript  
+} 
   "author": "Your Name",  
   "license": "ISC"  
 }
