--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"  
   },  
   "dependencies": {  
-    "express": "^4.18.2"  // Example dependency  
+    "express": "^4.18.2"  
   },  
   "devDependencies": {  
-  "nodemon": "^2.0.20",   
-  "typescript": "^4.9.5" // Add this line if you need TypeScript  
-} 
+    "nodemon": "^2.0.20"  
+  },  
   "author": "Your Name",  
   "license": "ISC"  
 }
