--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",  
   "scripts": {  
     "start": "node index.js",  
-    "build": "react-scripts build",
+    "build": "react-scripts build",  
     "test": "echo \"Error: no test specified\" && exit 1"  
   },  
   "dependencies": {  
-    "express": "^4.18.2"  
+    "express": "^4.18.2",  
+    "react": "^17.0.0", 
+    "react-dom": "^17.0.0", 
+    "react-scripts": "5.0.0" 
   },  
   "devDependencies": {  
     "nodemon": "^2.0.20"  
