--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
+version: '3.8'  # Optional but good to specify  
 services:  
   app:  
     build:  
-      context: .  
-      dockerfile: Dockerfile  
+      context: .  # Ensure this is where your Dockerfile is located  
+      dockerfile: Dockerfile  # Ensure this matches your actual Dockerfile name  
     ports:  
-      - "80:80"
+      - "80:80"  # Bind host port to container port
